@@ -8,7 +8,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.broadinstitute.consent.http.cloudstore.GCSService;
 import org.broadinstitute.consent.http.db.FileStorageObjectDAO;
 import org.broadinstitute.consent.http.enumeration.FileCategory;
@@ -82,7 +81,7 @@ public class FileStorageObjectService implements ConsentLogger {
     try {
       Map<BlobId, InputStream> documentMap = gcsService.getDocuments(
           fileStorageObjects.stream().map(FileStorageObject::getBlobId)
-              .collect(Collectors.toList()));
+              .toList());
 
       fileStorageObjects.forEach((fso) -> fso.setUploadedFile(documentMap.get(fso.getBlobId())));
     } catch (NotFoundException e) {
